--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "googleapis": "^150.0.1"
   }
 }
